[package]
name = "lf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
prettytable-rs = "0.10.0"
textwrap = { version = "0.16.1", features = ["terminal_size"] }
users = "0.11.0"
